# handlers/getPatients.go
@@ -3,8 +3,12 @@ package handlers
 import (
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/go-openapi/swag"
+	"time"
+
 	runtime "github.com/hamza-sharif/homeopathic-doctor-assistant"
+	genmode "github.com/hamza-sharif/homeopathic-doctor-assistant/gen/models"
 	gen "github.com/hamza-sharif/homeopathic-doctor-assistant/gen/restapi/operations"
+	"github.com/hamza-sharif/homeopathic-doctor-assistant/models"
 )
 
 func NewGetPatient(rt *runtime.Runtime) gen.GetPatientsHandler {
@@ -18,35 +22,52 @@ type getPatient struct {
 }
 
 func (c *getPatient) Handle(params gen.GetPatientsParams, principal interface{}) middleware.Responder {
-	log().Debugf("Request: add new patient")
+	log().Debugf("Request: get patients patient")
+	log().Debugf("Request: 111")
 
-	filter := getPatientFilter(params)
-	pts, err := c.rt.Svc.GetPatients(filter)
+	filter, limit, offset := getPatientFilter(params)
+	log().Debugf("Request: get patients patient")
+	pts, size, err := c.rt.Svc.GetPatients(filter, limit, offset)
 	if err != nil {
 		log().Debugf("not able to get list of patients: %v", err)
 		return gen.NewGetPatientsBadRequest().WithPayload("not able to update user")
 	}
-	return gen.NewGetPatientsOK().WithPayload(convertPatients(pts))
+	return gen.NewGetPatientsOK().WithPayload(&genmode.PatientResponse{
+		Size: int32(size),
+		Data: convertPatients(pts),
+	})
 }
 
-func getPatientFilter(p gen.GetPatientsParams) map[string]interface{} {
-	filter := map[string]interface{}{}
+func getPatientFilter(p gen.GetPatientsParams) (models.Patient, int, int) {
+	patient := models.Patient{}
 
 	if p.Name != nil {
-		filter["name"] = swag.StringValue(p.Name)
+		patient.Name = swag.StringValue(p.Name)
 	}
 
 	if p.MobileNo != nil {
-		filter["mobile_no"] = swag.StringValue(p.MobileNo)
+		patient.MobileNo = swag.StringValue(p.MobileNo)
+	}
+
+	if p.Cnic != nil {
+		patient.Cnic = swag.StringValue(p.Cnic)
 	}
 
 	if p.FatherOrHusbandName != nil {
-		filter["father_or_husband_name"] = swag.StringValue(p.FatherOrHusbandName)
+		patient.FatherOrHusbandName = swag.StringValue(p.FatherOrHusbandName)
 	}
 
 	if p.DateTime != nil {
-		filter["created_at"] = p.DateTime
+		patient.CreatedAt = time.Time(*p.DateTime)
 	}
 
-	return filter
+	var limit, offset int
+	if p.Limit != nil {
+		limit = int(*p.Limit)
+	}
+	if p.Offset != nil {
+		offset = int(*p.Offset)
+	}
+
+	return patient, limit, offset
 }
